--- a/tmux-local.conf
+++ b/tmux-local.conf
@@ -3,7 +3,7 @@
 # colorscheme otherwise the  colorscheme does not look as expected
 
 # default shell
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/bash
 
 
 # default terminal 
@@ -64,10 +64,18 @@ bind [ copy-mode
 
 
 # Tmux 2.4 onwards
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi y send-keys -X copy-selection
+# Setup 'v' to begin selection as in Vim
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+
+#bind -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
+#bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 bind ] paste-buffer
 
 # bind ` copy-mode
