--- a/tmux-local.conf
+++ b/tmux-local.conf
@@ -45,9 +45,9 @@ bind-key x kill-pane
 # set -g mouse-resize-pane on
 # set -g mouse-select-pane on
 # set -g mouse-select-window on
-set -g pane-border-fg magenta
-set -g pane-active-border-fg green
-set -g pane-active-border-bg default
+set -g pane-border-style fg=magenta
+set -g pane-active-border-style fg=green
+set -g pane-active-border-style bg=default
 
 # vim like copy paste
 setw -g mode-keys vi
@@ -64,18 +64,18 @@ bind [ copy-mode
 
 
 # Tmux 2.4 onwards
-#bind-key -T copy-mode-vi v send-keys -X begin-selection
-#bind-key -T copy-mode-vi y send-keys -X copy-selection
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection
 # Setup 'v' to begin selection as in Vim
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T vi-copy v begin-selection
+#bind-key -T vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T copy-mode-vi M-y send -X copy-pipe "reattach-to-user-namespace pbcopy"
+#bind-key -T vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-#bind -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
-#bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
+bind -T copy-mode-vi M-y send -X copy-pipe "xclip -i -sel p -f | xclip -i -sel c" \; display-message "copied to system clipboard"
+bind-key -T copy-mode-vi V send-keys -X rectangle-toggle
 bind ] paste-buffer
 
 # bind ` copy-mode
@@ -136,18 +136,17 @@ set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-#set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
-#set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
+set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 # Keep window names as I set them
 setw -g automatic-rename off
 set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27]#I:#W#[fg=colour27, bg=colour235]"
+set-window-option -g xterm-keys on
 
 # My shortcuts
 bind-key v new-window -n 'vim' vim
-bind-key F12 command-prompt -p Compile "split-window -h 'mk cpm i386;read'"
 bind-key e setw synchronize-panes on
 bind-key E setw synchronize-panes off
 bind-key -n S-Left swap-window -t -1
 bind-key -n S-Right swap-window -t +1
 bind -n C-k clear-history
-bind-key M-l command-prompt -p ':send-keys "shell nvcLoggerSet 0\\nshell traceEnable\\n shell traceLimitDisable\\n"'
