active-inactive tmux windows

--- a/tmux-local.conf
+++ b/tmux-local.conf
@@ -3,11 +3,12 @@
 # colorscheme otherwise the  colorscheme does not look as expected
 
 # default shell
-set-option -g default-shell /bin/bash
+#set-option -g default-shell /bin/bash
+set-option -g default-shell /bin/zsh
 
 
 # default terminal 
-#set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color"
 
 # Theme
 set -g @colors-solarized 'dark'
@@ -136,12 +137,26 @@ set-option -g status-interval 2
 set-option -g status-justify "centre"
 set-option -g status-left-length 60
 set-option -g status-right-length 90
-set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
-set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
+#set-option -g status-left "#(~/.tmux/plugins/tmux-powerline/powerline.sh left)"
+#set-option -g status-right "#(~/.tmux/plugins/tmux-powerline/powerline.sh right)"
 # Keep window names as I set them
 setw -g automatic-rename off
 set-window-option -g window-status-current-format "#[fg=colour235, bg=colour27]#[fg=colour255, bg=colour27]#I:#W#[fg=colour27, bg=colour235]"
 set-window-option -g xterm-keys on
+
+#-------------------------------------------------------#
+#Pane colours
+#-------------------------------------------------------#
+# set inactive/active window styles
+set -g window-style 'fg=colour247,bg=colour236'
+set -g window-active-style 'fg=colour250,bg=black'
+ 
+#pane border
+set -g pane-border-bg colour235
+set -g pane-border-fg colour238
+set -g pane-active-border-bg colour236
+set -g pane-active-border-fg colour51
+#-------------------------------------------------------#
 
 # My shortcuts
 bind-key v new-window -n 'vim' vim
